Applied simple naviagtion
Added stubs for navigation for testing that all components work to some degree,

--- a/client/src/components/MainMenu.css
+++ b/client/src/components/MainMenu.css
@@ -1,6 +1,5 @@
 ul {
     height: 100%;
-    width: 150px;
     background-color: rgb(46, 41, 41);
     position: fixed;
     display: flex;
@@ -13,6 +12,7 @@ ul {
 li {
     margin: 20px;
     list-style-type: none;
+    color: antiquewhite
 }
 
 li:hover {
