Added game picker to side-nav.
Added game picker to side-nav, fiddled with css.

--- a/client/src/components/MainMenu.css
+++ b/client/src/components/MainMenu.css
@@ -1,16 +1,14 @@
 ul {
-    height: 100%;
-    background-color: rgb(46, 41, 41);
-    position: fixed;
     display: flex;
     flex-direction: column;
     align-content: flex-start;
     top: 0px;
-    margin-top: 0px;
+    margin: 0rem;
 }
 
 li {
     margin: 20px;
+    margin-left: 0rem;
     list-style-type: none;
     color: antiquewhite
 }
